--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -168,13 +168,13 @@ div.button_gray {
 div.button_white {
     font-family: monospace;
     display: inline-block;
-    height: 8em;
+    height: 8.5em;
     font-size: 1.1vw;
-    margin: 0 auto;
+    margin-tog: 2px;
     margin-left: 2px;
     margin-right: 2px;
     margin-bottom: 25px;
-    padding: 0.2em;
+    padding: 0.25em;
     border-radius: 5px;
     text-align: center;
     background-color: #ffffff;
