--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -168,12 +168,12 @@ div.button_gray {
 div.button_white {
     font-family: monospace;
     display: inline-block;
-    height: 8.5em;
-    font-size: 1.1vw;
-    margin-tog: 2px;
-    margin-left: 2px;
-    margin-right: 2px;
-    margin-bottom: 25px;
+    height: 9em;
+    font-size: 1.2vw;
+    margin-tog: 0.1em;
+    margin-left: 0.1em;
+    margin-right: 0.1em;
+    margin-bottom: 1em;
     padding: 0.25em;
     border-radius: 5px;
     text-align: center;
