--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -167,7 +167,7 @@ div.button_gray {
 
 div.button_white {
     font-family: monospace;
-    display: inline-block;
+    display: table-cell;
     height: 9em;
     font-size: 1.2vw;
     margin-tog: 0.1em;
