--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -167,7 +167,8 @@ div.button_gray {
 
 div.button_white {
     font-family: monospace;
-    height: 9em;
+    display: inline-block;
+    height: 10em;
     font-size: 1.2vw;
     margin-tog: 0.1em;
     margin-left: 0.1em;
@@ -175,7 +176,7 @@ div.button_white {
     margin-bottom: 1em;
     padding: 0.2em;
     border-radius: 5px;
-    text-align: center;
+    text-align: vertical;
     background-color: #ffffff;
     color: #069;
     border: 2px solid #069;
