--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -176,7 +176,7 @@ div.button_white {
     margin-bottom: 1em;
     padding: 0.2em;
     border-radius: 5px;
-    text-align: vertical;
+    text-align: middle;
     background-color: #ffffff;
     color: #069;
     border: 2px solid #069;
