--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -170,13 +170,13 @@ div.button_white {
     display: inline-block;
     height: 10em;
     font-size: 1.2vw;
-    margin-tog: 0.1em;
+    margin-top: 0.1em;
     margin-left: 0.1em;
     margin-right: 0.1em;
     margin-bottom: 1em;
     padding: 0.2em;
     border-radius: 5px;
-    text-align: middle;
+    text-align: center;
     background-color: #ffffff;
     color: #069;
     border: 2px solid #069;
