--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -167,7 +167,7 @@ div.button_gray {
 
 div.button_white {
     font-family: monospace;
-    display: inline-block;
+    display: block;
     height: 10em;
     font-size: 1.2vw;
     margin-top: 0.1em;
@@ -184,7 +184,7 @@ div.button_white {
 }
 
 div p.button_white {
-    display: inline-block;
+    display: block;
     height: 10em;
     font-family: monospace;
     font-size: 1.5vw;
