--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -176,6 +176,7 @@ div.button_white {
     padding: 0.15em;
     border-radius: 5px;
     text-align: center;
+    overflow-wrap: break-word;
     background-color: #ffffff;
     color: #069;
     border: 2px solid #069;
