--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -182,14 +182,11 @@ div.button_white {
     border: 2px solid #069;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
 }
-span.vetically-centered {
-  display: table-cell;
-  vertical-align: middle;
-}
 #container {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 1em;
 }
 
 div p.button_white {
