--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -182,11 +182,17 @@ div.button_white {
     border: 2px solid #069;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
 }
-#container {
+#container1 {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 1em;
+}
+#container2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5em;
 }
 
 div p.button_white {
