--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -168,7 +168,7 @@ div.button_gray {
 div.button_white {
     font-family: monospace;
     height: 10em;
-    fontsize: 16px;
+    font-size: 16px;
     font-size: 1.2vw;
     border-radius: 5px;
     text-align: center;
