--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -169,7 +169,7 @@ div.button_white {
     font-family: monospace;
     height: 11em;
     font-size: 20px;
-    font-size: 2vw;
+    font-size: 1.4vw;
     border-radius: 5px;
     text-align: center;
     overflow-wrap: break-word;
@@ -177,6 +177,10 @@ div.button_white {
     color: #069;
     border: 2px solid #069;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+    }
+    @media screen {
+      font-size: 20px;
+      font-size: 2vw;    
 }
 #container1 {
   display: flex;
