--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -181,7 +181,8 @@ div.button_white {
     @media screen and (max-width: 400px) {
     div.button_white {
      font-size: 20px;
-     font-size: 2vw;
+     font-size: 4vw;
+     border-radius: 10px;
 }      
       
 }
