--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -184,13 +184,13 @@ div.button_white {
      font-size: 20px;
      font-size: 4vw;
      border-radius: 10px; }
+}
     @media screen and (max-width: 400px) {
     div.button_white {
      height: 15em;
      font-size: 20px;
      font-size: 5vw;
-     border-radius: 10px;
-     float: none;
+     border-radius: 10px;}
 }      
       
 }
