--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -193,7 +193,8 @@ div.button_white {
      width: 150px;
      font-size: 20px;
      font-size: 4vw;
-     border-radius: 10px;}
+     border-radius: 10px;
+     margin:0em;}
 }      
 #container1 {
   display: flex;
@@ -210,7 +211,7 @@ div.button_white {
 }
 #container1-font-larger {
   display: flex;
-  font-size: 2.1em;
+  font-size: 1.8em;
   justify-content: center;
   align-items: center;
   margin: 0.5em;
