--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -211,6 +211,13 @@ div.button_white {
 }
 #container1-font-larger {
   display: flex;
+  font-size: 1.4em;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5em;
+}
+#container1-font-huge {
+  display: flex;
   font-size: 1.6em;
   justify-content: center;
   align-items: center;
