--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -181,20 +181,22 @@ div.button_white {
     }
     @media screen and (max-width: 600px) {
     div.button_white {
-     height: 11em;
-     width: 150px;
-     font-size: 20px;
-     font-size: 3vw;
-     border-radius: 10px; }
+    height: 11em;
+    width: 150px;
+    font-size: 20px;
+    font-size: 5vw;
+    border-radius: 10px;
+    }
 }
     @media screen and (max-width: 400px) {
     div.button_white {
-     height: 100px;
-     width: 150px;
-     font-size: 20px;
-     font-size: 4vw;
-     border-radius: 10px;
-     margin:0em;}
+    height: 150px;
+    width: 150px;
+    font-size: 20px;
+    font-size: 3vw;
+    border-radius: 10px;
+    margin:0em;
+    }
 }      
 #container1 {
   display: flex;
