--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -200,7 +200,7 @@ div.button_white {
     @media screen and (max-width: 400px) {
     div.button_white {
     height: 100px;
-    width: 120px;
+    width: 30%;
     font-size: 20px;
     font-size: 4vw;
     border-radius: 10px;
