--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -195,6 +195,7 @@ div.button_white {
     font-size: 20px;
     font-size: 5vw;
     border-radius: 10px;
+    margin-bottom: 2.5em;      
     }
 }
     @media screen and (max-width: 400px) {
@@ -205,6 +206,7 @@ div.button_white {
     font-size: 3vw;
     border-radius: 10px;
     margin:0em;
+    margin-bottom: 2.5em;
     }
 
     @media screen and (max-width: 200px) {
@@ -215,6 +217,7 @@ div.button_white {
     font-size: 2vw;
     border-radius: 10px;
     margin:0em;
+    margin-bottom: 2.5em;
     }
 }      
 #container1 {
