--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -208,6 +208,7 @@ div.button_white {
     margin:0em;
     margin-bottom: 2.5em;
     }
+}
 
     @media screen and (max-width: 200px) {
     div.button_white {
