--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -191,7 +191,7 @@ div.button_white {
     @media screen and (max-width: 700px) {
     div.button_white {
     height: 11em;
-    width: 32%px;
+    width: 32%;
     font-size: 20px;
     font-size: 6vw;
     border-radius: 10px;
