--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
         
         {{ content }}
         
-      <div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>    
+      <div align="center" style="margin-bottom: 1em; margin-top:1em">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>    
         
       {% if page.url != "/" %}
 
