--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -111,6 +111,18 @@ h2 {
     
 }
 
+h4 { 
+    width: 100%;
+    height: 1.2em; 
+    margin: 0 auto;
+    margin-bottom: 20px;
+    padding: 0em;
+    text-align: left;
+    color: #111;
+    font-family: "Cabin Sketch";
+    border-bottom: 2px solid rgba(85, 85, 85, 0.1);  
+}
+
 hr.fancyLine {
       border: none;
       border-top: 35px solid rgba(85, 85, 85, 0.1);
