--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,9 @@ layout: default
 
 
   {% if page.next %}
+  <div style="text-align:right">
     <a class="next" href="{{ site.baseurl }}{{page.next.url}}"><small><tt>{{page.next.title}}</tt></small>&nbsp;&nbsp;<i class="fa fa-arrow-right"></i> </a>
+  </div>
   {% endif %}  
 
 </div>
