--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,13 +5,11 @@ layout: default
 {{ content }}
 
 <div class="PageNavigation">
-
   {% if page.previous %}
     <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}"><i class="fa fa-arrow-left"></i>&nbsp;&nbsp;<small><tt>{{page.previous.title}}</tt></small></a>
-  {% endif %}
-  {% if page.next %}
+  {% endif %}{% if page.next %}
   <div style="text-align:right">
-    <a class="next" href="{{ site.baseurl }}{{page.next.url}}"><small><tt>{{page.next.title}}</tt></small>&nbsp;&nbsp;<i class="fa fa-arrow-right"></i> </a>
+    <a class="next" href="{{ site.baseurl }}{{page.next.url}}"><small><tt>{{page.next.title}}</tt></small>&nbsp;&nbsp;<i class="fa fa-arrow-right"></i></a>
   </div>
   {% endif %}  
 
