--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -266,3 +266,9 @@ div.button_white {
   align-items: center;
   margin: 0.75em;
 }
+#container3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.25em;
+}
