--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -270,5 +270,11 @@ div.button_white {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0.5em;
+}
+#container4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0.25em;
 }
