--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,6 +59,20 @@ figcaption:before {
   font-weight: bold;
 }
 
+
+picture {
+  text-align: justify;
+  font-size: smaller;
+  text-indent: 0;
+  border: 2px #aabbcc solid;
+  margin: 2.5em;
+  padding: 0.5em;
+  background-color: #ffffff;
+  border-radius: 0px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
 h3 { 
     width: 95%; 
     height: 1.5em; 
