--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,7 +24,7 @@ body {
 }
 
 /**
- * Figures
+ * Figures & Pictures
  */
 
 figcaption {
@@ -71,6 +71,18 @@ picture {
   border-radius: 0px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+footer {
+    font-size: .8rem;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+.output {
+    background: #eee;
+    position: relative;
+}
+
 
 
 h3 { 
