--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
   
         <a href="/"><i class='fa fa-home fa-lg'></i></a>&nbsp;
   
-        <a href="mailto:Doris%20Stoppacher%20%3Cdstoppacher@ucsc.edu%3E"><i class="fa fa-paper-plane fa-lg"></i></a>
+        <a href="mailto:Doris%20Stoppacher%20%3Cdoris.stoppacher@uam.es%3E"><i class="fa fa-paper-plane fa-lg"></i></a>
       {% endif %}  
 
       </section>    
