--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -64,11 +64,11 @@ picture {
   text-align: justify;
   font-size: smaller;
   text-indent: 0;
-  border: 2px #aabbcc solid;
+  border: 2px #069 solid;
   margin: 0em;
   padding: 0.1em;
-  background-color: #ffffff;
-  border-radius: 0px;
+  background-color: #aabbcc;
+  border-radius: 2px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
