--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,13 +60,13 @@ figcaption:before {
 }
 
 
-picture {
+#figure2 {
   text-align: justify;
   font-size: smaller;
   text-indent: 0;
-  border: 2px #069 solid;
-  margin: 2.5em;
-  padding: 0.1em;
+  border: 4px #069 solid;
+  margin: 1em;
+  padding: 0.5em;
   background-color: #aabbcc;
   border-radius: 3px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
