--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,19 +59,6 @@ figcaption:before {
   font-weight: bold;
 }
 
-
-#figure2 {
-  text-align: justify;
-  font-size: smaller;
-  text-indent: 0;
-  border: 4px #069 solid;
-  margin: 1em;
-  padding: 0.5em;
-  background-color: #aabbcc;
-  border-radius: 3px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
 h3 { 
     width: 95%; 
     height: 1.5em; 
@@ -256,6 +243,16 @@ div.button_white {
     }
 }
 
+#container-figure {
+  font-size: smaller;
+  text-indent: 0;
+  border: 4px #069 solid;
+  margin: 1em;
+  padding: 0.5em;
+  background-color: #aabbcc;
+  border-radius: 3px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 #container1 {
   display: flex;
