--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -267,6 +267,13 @@ div.button_white {
   align-items: center;
   margin: 0.1em;
 }
+#container1-font-medium {
+  display: flex;
+  font-size: 1.0em;
+  justify-content: center;
+  align-items: center;
+  margin: 0.1em;
+}
 #container1-font-larger {
   display: flex;
   font-size: 1.4em;
