--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,7 +48,7 @@ img {
   text-align: justify;
   font-size: smaller;
   text-indent: 0;
-  border: 0px #069 solid;
+  border: 0px #aabbcc solid;
   margin: 1em;
   padding: 0.1em;
   background-color: #aabbcc;
@@ -262,7 +262,7 @@ div.button_white {
 }
 #container1-font-smaller {
   display: flex;
-  font-size: 0.4em;
+  font-size: 0.5em;
   justify-content: center;
   align-items: center;
   margin: 0.1em;
