--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -262,6 +262,58 @@ div.button_white {
     }
 }
 
+div.button_white_small {
+    font-family: monospace;
+    display: flex;
+    height: 2.5em;
+    width: 8.5em;
+    font-size:0.7em;
+    border-radius: 5px;
+    text-align: center;
+    justify-content:center;
+    align-items:center;
+    margin:0.5em;
+    margin-bottom:2.5em;
+    overflow-wrap: break-word;
+    background-color: #ffffff;
+    color: #069;
+    border: 2px solid #069;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+    }
+    @media screen and (max-width: 800px) {
+    div.button_white {
+    height: 2em;
+    width: 20%;
+    font-size: 20px;
+    font-size: 2.2vw;
+    border-radius: 10px;
+    margin-bottom: 1.5em;      
+    }
+}
+    @media screen and (max-width: 600px) {
+    div.button_white_small {
+    height: 2em;
+    width: 20%;
+    font-size: 20px;
+    font-size: 2vw;
+    border-radius: 10px;
+    margin:0em;
+    margin-bottom: 2em;
+    }
+}
+
+    @media screen and (max-width: 400px) {
+    div.button_white_small {
+    height: 11em;
+    width: 20%;
+    font-size: 20px;
+    font-size: 3vw;
+    border-radius: 10px;
+    margin:0em;
+    margin-bottom: 2em;
+    }
+}
+
 div.button_white_project {
     font-family: monospace;
     height: 6em;
@@ -286,8 +338,8 @@ div.button_white_project {
     }
 }
     @media screen and (max-width: 600px) {
-    div.button_white {
-    height: 2em;
+    div.button_white_project {
+    height: 11em;
     width: 32%;
     font-size: 20px;
     font-size: 2vw;
@@ -298,7 +350,7 @@ div.button_white_project {
 }
 
     @media screen and (max-width: 400px) {
-    div.button_white {
+    div.button_white_project {
     height: 11em;
     width: 31%;
     font-size: 20px;
