--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -317,6 +317,7 @@ div.button_white_small {
 div.button_white_project {
     font-family: monospace;
     height: 6em;
+    width: 8.5em;
     width: 25%;
     font-size: 1.3vw;
     border-radius: 5px;
@@ -329,7 +330,8 @@ div.button_white_project {
     }
     @media screen and (max-width: 800px) {
     div.button_white {
-    height: 2em;
+    height: 6em;
+    width: 8.5em;
     width: 32%;
     font-size: 20px;
     font-size: 2.2vw;
@@ -339,7 +341,8 @@ div.button_white_project {
 }
     @media screen and (max-width: 600px) {
     div.button_white_project {
-    height: 11em;
+    height: 6em;
+    width: 8.5em;
     width: 32%;
     font-size: 20px;
     font-size: 2vw;
