--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -281,7 +281,7 @@ div.button_white_small {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
     }
     @media screen and (max-width: 800px) {
-    div.button_white {
+    div.button_white_small {
     height: 2em;
     width: 20%;
     font-size: 20px;
@@ -329,7 +329,7 @@ div.button_white_project {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
     }
     @media screen and (max-width: 800px) {
-    div.button_white {
+    div.button_white_project {
     height: 6em;
     width: 8.5em;
     width: 32%;
