--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,7 +48,7 @@ img {
   text-align: justify;
   font-size: smaller;
   text-indent: 0;
-  border: 0px #aabbcc solid;
+  border: 0px black solid;
   margin: 1em;
   padding: 0.1em;
   background-color: #aabbcc;
