--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -318,14 +318,14 @@ div.button_white_project {
     font-family: monospace;
     height: 6em;
     width: 8.5em;
-    width: 25%;
-    font-size: 1.3vw;
+    font-size: 1em;
     border-radius: 5px;
     text-align: center;
     overflow-wrap: break-word;
     background-color: #ffffff;
     color: #069;
     border: 2px solid #069;
+    margin-left: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
     }
     @media screen and (max-width: 800px) {
@@ -336,7 +336,8 @@ div.button_white_project {
     font-size: 20px;
     font-size: 2.2vw;
     border-radius: 10px;
-    margin-bottom: 1.5em;      
+    margin-bottom: 1.5em;
+    margin-left: 0.5em;
     }
 }
     @media screen and (max-width: 600px) {
@@ -361,6 +362,7 @@ div.button_white_project {
     border-radius: 10px;
     margin:0em;
     margin-bottom: 2em;
+    margin-left: 0.1em;
     }
 }
 
