--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -185,7 +185,7 @@ div.button_gray {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.02);
     color: #111;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 div.large-margin{
@@ -226,7 +226,7 @@ div.button_white {
     background-color: #ffffff;
     color: #069;
     border: 2px solid #069;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     @media screen and (max-width: 800px) {
     div.button_white {
@@ -278,7 +278,7 @@ div.button_white_small {
     background-color: #ffffff;
     color: #069;
     border: 2px solid #069;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     @media screen and (max-width: 800px) {
     div.button_white_small {
@@ -326,7 +326,7 @@ div.button_white_project {
     color: #069;
     border: 2px solid #069;
     margin-left: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     @media screen and (max-width: 800px) {
     div.button_white_project {
