--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -232,6 +232,7 @@ div.button_white {
     @media screen and (max-width: 800px) {
     div.button_white {
     width: 18%;
+    font-size: 0.9em;
     border-radius: 10px;
     margin-bottom: 1.5em;
     margin-left: 0.1em;
@@ -242,6 +243,7 @@ div.button_white {
     width: 18%;
     border-radius: 10px;
     margin:0em;
+    font-size: 0.75em;
     margin-bottom: 2em;
     margin-left: 0.1em;
     }
@@ -249,6 +251,7 @@ div.button_white {
     @media screen and (max-width: 400px) {
     div.button_white {
     width: 18%;
+    font-size: 0.75em;
     border-radius: 10px;
     margin:0em;
     margin-bottom: 2em;
